<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212">

    <Button
        android:id="@+id/email_code_verification_page_back_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_margin="16dp"
        android:background="@drawable/circle_shape"
        android:text="&lt;"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#B3B3B3"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Texto: Create account -->

    <!-- Texto: Enter your E-mail -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Input de correo electrónico -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        android:text="@string/validate_you_e_mail"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/check_your_email"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_code_verification_page_input" />

    <Button
        android:id="@+id/email_code_verification_page_finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/login_email_page_next_shape"
        android:text="@string/finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <Button
        android:id="@+id/email_code_verification_page_resend_button"
        android:layout_width="88dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_email_page_email_shape"
        android:text="@string/resend"
        android:textColor="#353535"
        android:backgroundTint="#777777"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintLeft_toRightOf="@id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_code_verification_page_input" />

    <EditText
        android:id="@+id/email_code_verification_page_input"
        android:background="@drawable/login_email_page_email_shape"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="47dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/enter_verification_code"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <!-- Texto de verificación -->

    <!-- Botón adicional -->

</androidx.constraintlayout.widget.ConstraintLayout>
